--- a/movil/MeYodaDemoProject/.gitignore
+++ b/movil/MeYodaDemoProject/.gitignore
@@ -29,12 +29,12 @@ proguard/
 .idea/
 
 # Gradle
-#build.gradle
-#gradle
-#gradlew
-#gradlew.bat
-#settings.gradle
-#.gradle
+build.gradle
+gradle
+gradlew
+gradlew.bat
+settings.gradle
+.gradle
 
 # Compiled source
 *.com
