--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
@@ -26,6 +26,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+                android:name="com.talentum.meyodademo.Registro"
+                android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar"
+                android:label="@string/app_name"
+                tools:ignore="NewApi">
+        </activity>
+
+        <activity
+                android:name="com.talentum.meyodademo.Navigation"
+                android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar"
+                android:label="@string/app_name"
+                tools:ignore="NewApi">
+        </activity>
     </application>
 
 </manifest>
