--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <activity
                 android:name="com.talentum.meyodademo.Navigation"
-                android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar"
+                android:uiOptions="splitActionBarWhenNarrow"
                 android:label="@string/app_name"
                 tools:ignore="NewApi">
         </activity>
