--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
                 android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar"
                 android:label="@string/app_name"
                 tools:ignore="NewApi">
+
         </activity>
 
         <activity
@@ -43,18 +44,12 @@
                 android:uiOptions="splitActionBarWhenNarrow"
                 android:label="@string/app_name"
                 tools:ignore="NewApi">
-                <meta-data
-                       android:name="android.app.searchable"
-                       android:resource="@xml/searchable" />
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                       android:resource="@xml/searchable"></meta-data>
         </activity>
-        <activity
-                android:name=".SearchResultsActivity"
-                android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar">
-                <intent-filter>
-                    <action android:name="android.intent.action.SEARCH" />
-                </intent-filter>
-                </activity>
-
 
 
     </application>
