--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/yoda_img"
         android:debuggable="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -43,12 +43,9 @@
                 android:uiOptions="splitActionBarWhenNarrow"
                 android:label="@string/app_name"
                 tools:ignore="NewApi">
-
-        </activity><![CDATA[
-        />
+                </activity>
 
 
-    ]]>
     </application>
 
 </manifest>
