listviews mostrando cartas correctamente y vista de carta individual

--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/AndroidManifest.xml
@@ -45,6 +45,12 @@
                 tools:ignore="NewApi">
                 </activity>
 
+        <activity
+                android:name="com.talentum.meyodademo.MostrarCarta"
+                android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar"
+                android:label="@string/app_name"
+                tools:ignore="NewApi">
+        </activity>
 
     </application>
 
